fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,10 @@ body {
 }
 
 .main-container {
-    min-height: 100vh;
-    max-height: 100vh;
-    min-width: 100vw;
-    max-width: 100vw;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
 
 #start-container {
@@ -76,7 +72,12 @@ body {
     justify-content: center;
     align-items: center;
     max-width: 900px;
+    width: 100%;
+    box-sizing: border-box;
+    overflow: auto;
+    padding: 20px;
     background-color: white;
+    border-radius: 16px;
 }
 
 #image {
@@ -91,8 +92,6 @@ body {
     font-style: normal;
     font-size: 28px;
     margin: 16px 24px 32px 24px;
-    grid-area: text;
-    flex-grow: 1;
 }
 
 .btn-grid {
@@ -121,21 +120,29 @@ body {
 }
 
 #option-buttons {
-    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
 }
 
-@media (max-width: 575.98px) { 
-    .btn {
-        font-size: 16px;
-        font-weight: 400;
+/* Responsive Design für mobile Geräte */
+@media (max-width: 600px) {
+    #game-container {
+        justify-content: space-between;
+        width: 100%;
+        height: 100vh; 
+        padding: 0 0 16px 0; 
+        border-radius: 0px;
     }
 
     #text {
-        font-size: 24px;
-        margin: 32px 24px 32px 24px;
+        font-size: 16px;
+        flex-grow: 1;
     }
 
-    #game-container {
-        min-height: 100vh;
+    .btn {
+        font-size: 14px;
+        font-weight: 300;
     }
 }
